...
    var body: some View {
        VStack(spacing: 20) {
            Image(systemName: "magnifyingglass")
                .font(.system(size: 60))
                .foregroundColor(.accentMedium)

            Text("Ничего не найдено")
                .appFont(.header2)
                .foregroundColor(.accentDark)
                .multilineTextAlignment(.center)

            Text("Попробуйте другие запросы")
                .appFont(.body)
                .foregroundColor(.accentMedium)
                .multilineTextAlignment(.center)
        }
        .frame(maxWidth: .infinity)
        .padding(.top, 50)
...
