//
//  SearchView.swift
//  Mobile_lab2
//
//  Created by dark type on 18.03.2025.
//

import SwiftUI

struct SearchView: View {
    var body: some View {
        Text("Search")
    }
}

#Preview {
    SearchView()
}
